--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,6 +1,36 @@
+
+html{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Star Jedi', arial;
+}
+
 .bg_image{
     background-image: url('./StarWars.jpg');
     background-size: cover;
     height: 100vh;
     color: #f5f5f5;
   }
+
+  .container{
+      height: 100vh;
+  }
+
+.sub-title{
+    font-weight: 700;
+    position: relative;
+    top: 730px;
+   text-align: center;
+    font-size: 8rem;
+}
+
+button{
+   position: relative;
+   left: 50px;
+   top: 25px;
+   width: 150px;
+}
