--- a/src/components/Translator.css
+++ b/src/components/Translator.css
@@ -8,3 +8,13 @@ body{
     text-align: center;
     margin-bottom: 15px;
   }
+
+  .bg-image{
+    background-image: url('./st.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+  
+
+  }
