ready to deploy

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -25,7 +25,7 @@ body{
 .sub-title{
     font-weight: 700;
     position: relative;
-    top: 710px;
+   top: 80%;
    text-align: center;
     font-size: 8rem;
     color: white;
